--- a/demo03/index.html
+++ b/demo03/index.html
@@ -7,15 +7,25 @@
   </head>
   <body>
     <div id="example"></div>
+
     <script type="text/babel">
+      // var arr = [
+      //   <h1>Hello world!</h1>,
+      //   <h2>React is awesome</h2>,
+      // ];
+      // ReactDOM.render(
+      //   <div>{arr}</div>,
+      //   document.getElementById('example')
+      // );
+
       var arr = [
-        <h1>Hello world!</h1>,
-        <h2>React is awesome</h2>,
+        <h1>hello world</h1>,
+        <h2>React is awssss</h2>,
+        <h3>your monther</h3>
       ];
-      ReactDOM.render(
-        <div>{arr}</div>,
-        document.getElementById('example')
-      );
+
+      ReactDOM.render(<div>{arr}</div>, document.getElementById('example'));
+
     </script>
   </body>
 </html>
