--- a/demo07/index.html
+++ b/demo07/index.html
@@ -7,25 +7,26 @@
   </head>
   <body>
     <div id="example"></div>
+    <script src="index.jsx" charset="utf-8" type="text/babel"></script>
     <script type="text/babel">
-var MyComponent = React.createClass({
-  handleClick: function() {
-    this.refs.myTextInput.focus();
-  },
-  render: function() {
-    return (
-      <div>
-        <input type="text" ref="myTextInput" />
-        <input type="button" value="Focus the text input" onClick={this.handleClick} />
-      </div>
-    );
-  }
-});
-
-ReactDOM.render(
-  <MyComponent />,
-  document.getElementById('example')
-);
+// var MyComponent = React.createClass({
+//   handleClick: function() {
+//     this.refs.myTextInput.focus();
+//   },
+//   render: function() {
+//     return (
+//       <div>
+//         <input type="text" ref="myTextInput" />
+//         <input type="button" value="Focus the text input" onClick={this.handleClick} />
+//       </div>
+//     );
+//   }
+// });
+//
+// ReactDOM.render(
+//   <MyComponent />,
+//   document.getElementById('example')
+// );
     </script>
   </body>
 </html>
