--- a/exercise-14/01-jsx.html
+++ b/exercise-14/01-jsx.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../build/react.js"></script>
-    <script src="../build/react-dom.js"></script>
+    <script src="../build/react-0.14.0.js"></script>
+    <script src="../build/react-dom-0.14.0.js"></script>
     <script src="../build/browser.min.js"></script>
   </head>
   <body>
     <div id="example"></div>
-
 
     <script type="text/babel">
       ReactDOM.render(
@@ -15,9 +14,6 @@
         document.getElementById('example')
       );
     </script>
-   
-
-    <!-- <script src="index.jsx" type="text/babel" charset="utf-8"></script> -->
 
   </body>
 </html>
