--- a/exercise-15/lifecycle.html
+++ b/exercise-15/lifecycle.html
@@ -8,16 +8,6 @@
   <body>
     <div id="example"></div>
 
-
-    <script type="text/babel">
-      ReactDOM.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('example')
-      );
-    </script>
-   
-
-    <!-- <script src="index.jsx" type="text/babel" charset="utf-8"></script> -->
-
+    <script src="lifecycle.js" type="text/babel" charset="utf-8"></script>
   </body>
 </html>
