--- a/demo02/index.html
+++ b/demo02/index.html
@@ -6,20 +6,52 @@
     <script src="../build/browser.min.js"></script>
   </head>
   <body>
+
     <div id="example"></div>
+
     <script type="text/babel">
-      var names = ['Alice', 'Emily', 'Kate'];
+      var names = ['a', 'b', 'c'];
+
+      names.map(function(value, index, array1){
+        console.log(value, index, array1);
+      });
+
+      var ChildComponent = React.createClass({
+        render: function(){
+          return (
+            <div key={this.props.name}>Hello, { this.props.name }</div>
+          )
+        }
+      });
 
       ReactDOM.render(
         <div>
         {
-          names.map(function (name) {
-            return <div>Hello, {name}!</div>
+          names.map(function(name){
+            return <ChildComponent key={name} name={name} />
           })
         }
         </div>,
         document.getElementById('example')
       );
+
+    </script>
+
+    <script type="text/babel">
+
+      // var names = ['Alice', 'Emily', 'Kate'];
+      //
+      // ReactDOM.render(
+      //   <div>
+      //   {
+      //     names.map(function (name) {
+      //       return <div>Hello, {name}!</div>
+      //     })
+      //   }
+      //   </div>,
+      //   document.getElementById('example')
+      // );
+
     </script>
   </body>
 </html>
