--- a/exercise-15/01-jsx.html
+++ b/exercise-15/01-jsx.html
@@ -9,18 +9,11 @@
     <div id="example"></div>
 
     <script type="text/babel">
-    
-      var HelloMessage = React.createClass({
-        render: function() {
-          return <h1>Hello {this.props.name}</h1>;
-        }
-      });
-
       ReactDOM.render(
-        <HelloMessage name="John" />,
+        <h1>Hello, world!</h1>,
         document.getElementById('example')
       );
-
     </script>
+
   </body>
 </html>
